compiler/tools/fpp-check/test/port_numbering/matched_port_numbering_no_valid_port.ref.txt
fpp-check
error: no port available for matched numbering
matched connections are specified here:
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/matched_port_numbering_no_valid_port.fpp:38.7
      c2.pOut -> c1.pIn
      ^
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/matched_port_numbering_no_valid_port.fpp:37.7
      c1.pOut -> c2.pIn
      ^
port matching is specified here:
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/matched_port_numbering_no_valid_port.fpp:10.5
    match pOut with pIn
    ^
note: to be available, a port number must be in bounds and unassigned at both of the matched ports
